Beginn vom Abschnitt über L_p‐Räume
git-svn-id: https://svn.lug-jena.de/uni-skripte@1519 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/schmeisser-hoehere-ana/skript.latex
+++ b/schmeisser-hoehere-ana/skript.latex
@@ -3089,12 +3089,17 @@ für die Stetigkeit für alle Punkte und alle Funktionen das selbe ist.
 
 \section{\texorpdfstring{$L_{p}$}{Lp}-Räume}
 
+Bisher haben wir uns bei den "`kleinen"' $l_{p}$"~Räumen mit Summen
+beschäftigt. Bei den "`großen"' $L_{p}$"~Räumen werden wir statt der Summen
+Integrale verwenden. Dementsprechend gehen wir von den Folgen über zu
+Funktionen.
+
 \parbox{.49\linewidth}{\centering
-  \begin{gather*}\int_{\Omega} \abs{f(x)}^{p}\,dx<\infty\end{gather*}\\
-  Funktionen}
-\parbox{.49\linewidth}{\centering
-  \begin{gather*}\sum_{k=1}^{\infty} \abs{a_{k}}^{p}\,x<\infty\end{gather*}\\
+  \begin{gather*}\sum_{k=1}^{\infty} \abs{a_{k}}^{p}<\infty\end{gather*}\\
   Folgen}
+\parbox{.49\linewidth}{\centering
+  \begin{gather*}\int_{\Omega} \abs{f(x)}^{p}\diff x<\infty\end{gather*}\\
+  Funktionen}
 
 \subsection{Maße}
 
