Neuer Literatureintrag: H. Triebel, Analysis und math. Phsyik
Dabei habe ich auch gleich den Vornamen von Herrn Triebel bei seinem
anderen Buch ausgeschrieben.


git-svn-id: https://svn.lug-jena.de/uni-skripte@1521 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/schmeisser-hoehere-ana/skript.latex
+++ b/schmeisser-hoehere-ana/skript.latex
@@ -388,6 +388,10 @@
  \bibitem{Reed}
   \LitEintrag{Michael Reed, Barry Simon}{Methods of modern mathematical
     physics: Functional Analysis}{Academic Press 1980}{0125850506}
+
+ \bibitem{Triebel-Ana+math-Phys}
+  \LitEintrag{Hans Triebel}{Analysis und mathematische Physik}{Birkhäuser
+    1989}{3764322500}
 \end{thebibliography}
 
 \part{1.~Semester}
