Definition Maß, Maßraum und messbar
git-svn-id: https://svn.lug-jena.de/uni-skripte@1523 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/schmeisser-hoehere-ana/skript.latex
+++ b/schmeisser-hoehere-ana/skript.latex
@@ -3150,19 +3150,24 @@ Triebel~\cite{Triebel-Ana+math-Phys}.
 \end{bemerk}
 
 \begin{defini}
-  $\mathcal{A}$ sei $\sigma$-Algebra ¸ber $\Omega$. Eine Abbildung $\mu \colon
-  \mathcal{A} \rightarrow [0,\infty]$ heiﬂt \highl{Maﬂ} auf $\mathcal{A}$
-  $:\Longleftrightarrow$
-  \begin{enumerate}
-   \item $\mu(A)\geq 0, \forall A\in \mathcal{A}$
-   \item $\mu(\emptyset) = 0$
-   \item $\mu(\bigcup_{k=1}^{\infty} A_{k}) =
-    \sum_{k=1}^{\infty}\mu(A_{k})$ falls $A_{k}\in \mathcal{A}$ und
-    $A_{k}\cap A_{j} = \emptyset (k\ne j)$
-  \end{enumerate}
+  Eine Abbildung $\mu\colon\mathcal{A} \rightarrow [0,\infty]$ heiﬂt
+  \gdwdef{\highl{Maﬂ} auf einer $\sigma$"~Algebra~$\mathcal{A}$ ¸ber der
+    Grundmenge~$\Omega$}
+  \begin{itemize}
+   \item die Abbildung nie negativ ist; $\mu(\mathcal{A})\geq 0$
+   \item f¸r die leere Menge null ist; $\mu(\emptyset) = 0$ und
+   \item f¸r jede abz‰hlbare Teilmenge~$A\subset\mathcal{A}$ der
+    $\sigma$"~Algebra mit paarweise disjunkten Elementen ($a,b\in A\colon
+    a\cap b=\emptyset$) gilt die Beziehung
+    \begin{gather*}
+      \mu(\bigcup_{a\in A} a) = \sum_{a\in A}\mu(a)
+    \end{gather*}
+  \end{itemize}
 
-  $A\in \mathcal{A}$ heiﬂt \highl[Menge!messbar]{messbare Menge}.
-  $(\Omega, \mathcal{A}, \mu)$ \highl{Maﬂraum}
+  Das Tripel~$(\Omega,\mathcal{A},\mu)$ aus Grundmenge, $\sigma$"~Algebra der
+  Grundmenge und Maﬂ auf der $\sigma$"~Algebra bezeichnet man als
+  \highl{Maﬂraum} und jede Menge~$A\in \mathcal{A}$ heiﬂt \highl{messbar}
+  oder \highl[Menge!messbar]{messbare Menge}.
 \end{defini}
 
 \begin{defini}
