Definitionen und Bemerkung zu Eigenschaften von Maßen
git-svn-id: https://svn.lug-jena.de/uni-skripte@1524 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/schmeisser-hoehere-ana/skript.latex
+++ b/schmeisser-hoehere-ana/skript.latex
@@ -3171,36 +3171,49 @@ Triebel~\cite{Triebel-Ana+math-Phys}.
 \end{defini}
 
 \begin{defini}
-  $(\Omega, \mathcal{A}, \mu)$ Maﬂraum
+  Es sei $(\Omega, \mathcal{A}, \mu)$ ein Maﬂraum
   \begin{enumerate}
-   \item
-    $\mu$ heiﬂt \highl[sigma-endlich@$\sigma$-endlich]{$\sigma$-endlich},
-    wenn das System $\{\Omega_{k}\}_{k}\subset \mathcal{A}$ mit
-    $\mu(\Omega_{k}) <\infty$
+   \item Das Maﬂ~$\mu$ heiﬂt \gdwdef{\highl{$\sigma$-endlich}} es eine
+    abz‰hlbare Teilmenge~$A$ der $\sigma$"~Algebra gibt, deren Elemente~$a\in
+    A$ ein \highl{endliches Maﬂ}~$\mu(a)<\infty$ haben und die $\Omega$
+    ¸berdeckt.
     \begin{gather*}
-      \Omega = \bigcup_{k=1}^{\infty} \Omega_{k}
+      \Omega = \bigcup_{a\in A} a
     \end{gather*}
-    existiert
-   \item
-    \highl[mu-endlich@$\mu$-endlich]{$\mu$-endlich}, falls
-    $\mu(\Omega)<\infty$
-   \item $\mu$ heiﬂt \highl{vollst‰ndig} $:\Longleftrightarrow$ $\forall
-    N\in \mathcal{A}\colon \mu(N)=0, \forall A\subset N \Longrightarrow A\in
-    \mathcal{A}\wedge \mu(A)=0$
+    Vereinigung kann an dieser Stelle nie mehr als $\Omega$ sein, da es per
+    Definition keine Menge in $\mathcal{A}$ geben kann, die ein Element
+    enth‰lt, dass nicht zu $\Omega$ gehˆrt.
+
+   \item Das Maﬂ~$\mu$ heiﬂt \gdwdef{\highl{$\mu$-endlich}} das Maﬂ der
+    Grundmenge~$\mu(\Omega)$ endlich ist.
+
+   \item Das Maﬂ~$\mu$ heiﬂt \gdwdef{\highl{vollst‰ndig}} jede Teilmenge einer
+    \highl{Nullmenge} eine Nullmenge ist und zur $\sigma$"~Algebra gehˆrt.
+    \begin{gather*}
+      \forall N\in \mathcal{A}\colon \mu(N)=0, \forall A\subset N
+         \impliziert A\in \mathcal{A}, \mu(A)=0
+    \end{gather*}
   \end{enumerate}
 \end{defini}
 
 \begin{bemerk}
   \begin{enumerate}
-   \item Wenn $\mu(A) = \infty$ zugelassen. Dann f¸r $r\geq0, r +\infty =
-    \infty, \infty+\infty = \infty$
-   \item $A,B\in \mathcal{A}, A\subset B \Longrightarrow \mu(A) \leq
-    \mu(B)$ Monotonie
-   \item Beispiel: $\Omega=\N, \mathcal{A}=\Polyn(\N), A\subset \N$
-    \begin{gather*}
-      \mu(A) := \card(A) (=\text{Anzahl der Elemente})
-    \end{gather*}
-    $\Longrightarrow$ $\sigma$-endlich vollst‰ndiges Maﬂ
+   \item Jedes Maﬂ~$\mu$ ist \highl{monoton}, d.\,h. f¸r zwei verschachtelte
+    Mengen~$A,B\in \mathcal{A}$ mit $A\subset B$ gilt $\mu(A) \leq \mu(B)$.
+
+    Aufgrund dieser Eigenschaft ist jedes $\mu$"~endliche Maﬂ auch
+    $\sigma$"~endlich.
+
+    \help{Sind diese beiden Sachen korrekt?}
+
+   \item Wenn wir sp‰ter auch unendliche Maﬂe~$\mu(A) = \infty$ zugelassen,
+    dann sollten folgenden Rechenregeln f¸r den Umgang mit Unendlich gelten:
+    $\infty+\infty = \infty$ und f¸r jede reelle Zahl~$r\geq0$ ist $r +\infty
+    =\infty$.
+
+   \item Die Abbildung~$\card$, die jeder Menge ihre M‰chtigkeit zuordnet,
+    ist f¸r den Maﬂraum $(\N, \PotM{\N}, \card)$ ein $\sigma$"~endliches und
+    vollst‰ndiges Maﬂ.
   \end{enumerate}
 \end{bemerk}
 
