Definition von Treppenfunktion und fast überall
git-svn-id: https://svn.lug-jena.de/uni-skripte@1530 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/schmeisser-hoehere-ana/skript.latex
+++ b/schmeisser-hoehere-ana/skript.latex
@@ -3331,29 +3331,40 @@ Triebel~\cite{Triebel-Ana+math-Phys}.
 \end{satz}
 
 \subsection{Messbare Fuktionen}
+
 \begin{defini}\label{def:trepfkt}
-  $(\Omega, \mathcal{A}, \mu)$ vollständiger $\sigma$-endlicher Maßraum.
+  Es sei $(\Omega, \mathcal{A}, \mu)$ ein vollständiger, $\sigma$-endlicher
+  Maßraum.
 
   \begin{enumerate}
-   \item $A\in \mathcal{A}, S\colon A \rightarrow \K$ heißt
-    \highl{einfache Funktion} oder \highl{Treppenfunktion} $:\Longleftrightarrow$
+   \item Weiterhin sei $A\in \mathcal{A}$. Eine Funktion~$S\colon
+    A\rightarrow\K$ heißt \gdwdef{\highl{einfache Funktion} oder
+    \highl{Treppenfunktion}} sie nur endlich viele Werte annimmt.
     \begin{gather*}
-      S(x) = \sum_{j=1}^{r} c_{j} \chi_{A\cap A_{j}}\qquad r\in \N,
-         c_{j}\in \K, A_{j}\in \mathcal{A}, A\subset \bigcup_{j=1}^{r} A_{j}\\
-      \chi_{A\cap A_{j}} =
-         \begin{cases}1& x\in A\cap A_{j}\\0&\text{sonst}\end{cases}
+      S(x) = \sum_{j=1}^{r} c_{j} \chi_{A\cap U_{j}}(x)
+         \qquad r\in \N, c_{j}\in \K, U_{j}\in \mathcal{A},
+         A\subset \bigcup_{j=1}^{r} U_{j}\\
+      \chi_{A\cap U_{j}}(x)
+         = \begin{cases}
+             1& x\in A\cap U_{j}\\
+             0& x\notin A\cap U_{j}
+           \end{cases}
          \qquad(\highl{charakteristische Funktion})
     \end{gather*}
-   \item Eine Eigenschaft $E(x)$ gilt auf einer Menge $A \subset \Omega$
-    \highl{fast überall}\index{f.\,ü.|see{fast überall}} ($\mu$-fast
-    überall, $\mu$-f.\,ü.) $:\Longleftrightarrow$ eine Nullmenge $N$
-    ($\mu(N) =0$) existiert und $E(x)$ auf $A\setminus N$ gilt.
+
+   \item Eine Eigenschaft $E(x)$ gilt
+    \index{f.\,ü.|see{fast überall}}\gdwdef{\highl{fast überall} oder
+    \highl{$\mu$-fast überall} auf einer Menge $A\subset\Omega$} eine
+    Nullmenge~$N\subset A$ existiert und $E(x)$ auf $A\setminus N$ gilt.
   \end{enumerate}
 
   \todo{Hier könnte noch ein Bild von einer Treppenfunktion hin. Mit
     gnuplot eine Funktion = A in die xy-Ebene (=$\Omega$) legen. Darüber
     einfach ein paar Seulen mit Zufallswerten.}
 \end{defini}
+
+Eine Eigenschaft gilt insbesondere dann fast überall, wenn sie überall gilt,
+da die leere Menge immer zur $\sigma$"~Algebra gehört und eine Nullmenge ist.
 
 \begin{defini}
   $f\colon A\rightarrow\K, A\in \mathcal{A}$ heißt \highl{messbar}
