Bemerkung zu Eigenschaften integrierbarer Funktionen
git-svn-id: https://svn.lug-jena.de/uni-skripte@1538 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/schmeisser-hoehere-ana/skript.latex
+++ b/schmeisser-hoehere-ana/skript.latex
@@ -3518,19 +3518,27 @@ da die leere Menge immer zur $\sigma$"~Algebra gehört und eine Nullmenge ist.
   \end{gather*}
 \end{defini}
 
-\begin{bemerk}\label{bem:2}
+\begin{bemerk}[Eigenschaften integrierbarer Funktionen]\label{bem:2}
   \begin{enumerate}
-   \item Ist $f=g$ f.\,ü. und $f$ integrierbar, dann ist auch $g$
-    integrierbar und
+   \item Sind die beiden Funktionen $f$ und $g$ fast überall gleich und ist
+    eine der beiden Funktionen integrierbar, so ist auch die andere Funktion
+    integrierbar und die Integrale sind gleich.
     \begin{gather*}
-      \int_{A} g\,d\mu = \int_{A} f\,d\mu
+      \int_{A} g\diff\mu = \int_{A} f\diff\mu
     \end{gather*}
-   \item \begin{gather*}\int_{A}d\mu = \mu(A)\end{gather*}
-   \item Sei $f\colon\Omega \rightarrow\K$ messbar. Dann ist
+
+   \item Das Integral der Funktion~$1$ auf der Menge $A$ ist gleich dem
+    Maß~$\mu(A)$ der Menge $A$.
     \begin{gather*}
-      \int_{A} f\,d\mu = \int_{\Omega} f\chi_{A}\,d\mu
+      \int_{A}\diff\mu = \mu(A)
     \end{gather*}
-    falls dieses existiert.
+
+   \item Fall das Integral einer messbaren
+    Funktion~$f\colon\Omega\rightarrow\K$ auf einer Menge $A\subset\Omega$
+    existiert, gilt
+    \begin{gather*}
+      \int_{A} f\diff\mu = \int_{\Omega} f\cdot\chi_{A}\diff\mu
+    \end{gather*}
   \end{enumerate}
 \end{bemerk}
 
