Gegenbeispiel für die Integral‐Limes‐Vertauschung
git-svn-id: https://svn.lug-jena.de/uni-skripte@1545 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/schmeisser-hoehere-ana/skript.latex
+++ b/schmeisser-hoehere-ana/skript.latex
@@ -3758,24 +3758,36 @@ da die leere Menge immer zur $\sigma$"~Algebra gehört und eine Nullmenge ist.
 % <news:d49.421a464d.9a65a@invisibletruth.local>
 \begin{bsp}\hspace*{0ex}\\
   \mbox{}\hfill\input{1x.tex}\hfill\mbox{}
+  \todo{Das Bild sollte besser gleiten}
 
-  Für die Funktionenfolge
+  Dass man Limes und Integral nicht unbedacht vertauschen kann, soll dieses
+  Beispiel zeigen. Wir haben eine Funktionenfolge $(f_{k})_{k}$,
+  die messbar ist, da alle Glieder selbst Treppenfunktionen sind.
   \begin{gather*}
-    f_{k} = \begin{cases}
-              k&\colon x\in [0,\frac1k]\\
+    f_{k}(x) = \begin{cases}
+              k&\colon x\in [0,\frac{1}{k}]\\
               0&\colon\text{sonst}
             \end{cases}
   \end{gather*}
-  existiert der $\lim_{k\rightarrow\infty} f_{k}(x) = 0 = g(x)$ f.\,ü.,
-  \help{erfüllt das wirklich die Bedingung von \autoref{satz:lebesgue}?}
-  der Betrag $\abs{f_{k}(x)}\leq g(x) = \nicefrac{1}{x}$ und
-  das Integral $\int_{A} f_{k}(x)\,dx = 1$ für alle $k$ -- die $f_{k}$
-  sind also messbar. Aber dennoch gilt nicht
+
+  Für diese Folge existiert der Grenzwert~$f(x)=0$ für alle $x\ne0$. Da die
+  Menge $\{0\}$ abzählbar ist, ist sie nach \autoref{satz:1.3.1/3} eine
+  Nullmenge. Der Grenzwert existiert also fast überall auf $[0,1]$. Für alle
+  $x\ne0$ gilt $\abs{f(x)}\leq g(x)=\frac{1}{x}$, also wieder fast überall auf
+  $[0,1]$.
+
+  Für alle $k$ ist das Integral von $f_{k}$ eins. Also ist der Grenzwert der
+  Integralfolge auch eins. Aber das Integral des Grenzwerts~$f(x)$ ist null.
+  Integral und Limes sind also offensichtlich nicht vertauschbar.
   \begin{gather*}
-    1 = \lim_{k\rightarrow\infty}\int f_{k}\,d\mu
-       \ne\int \lim_{k\rightarrow\infty} f_{k}\,d\mu = 0
+    1 = \lim_{k\rightarrow\infty}\int_{0}^{1} f_{k}\diff\mu
+       \ne\int_{0}^{1} \lim_{k\rightarrow\infty} f_{k}\diff\mu
+       = 0
   \end{gather*}
-  da die Funktion $g(x)$ nicht integrierbar ist.
+
+  Der Grund ist die Funktion $g(x)$, mit Hilfe derer wir die Beträge
+  abgeschätzt haben. Diese ist nämlich auf $[0,1]$ nicht integrierbar. Es sind
+  also nicht alle Voraussetzungen für den \autoref{satz:lebesgue} erfüllt.
 \end{bsp}
 
 \begin{satz}[B.~Levi, monotone + beschränkte Folgen]\label{satz:blevi}
