Satz mit Hölderscher und Minkowskischer Ungl. für Integrale
Beim Beweis der Hölderschen Ungleichung habe ich das oBdA nicht
verstanden, daher habe ich einfach den Beweis für die Summen‐Ungleichung
übernommen und angepasst.

Ich habe auch die Minkowskische Ungleichung als einen gesonderten Punkt
gemacht.

Für den Beweis der Minkowskischen und der anderen Ungleichung war ich zu
faul. Die sind genauso wie die Beweise mit den Summen, nur dass man hier
vorher die Messbarkeit begründet.


git-svn-id: https://svn.lug-jena.de/uni-skripte@1550 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/schmeisser-hoehere-ana/skript.latex
+++ b/schmeisser-hoehere-ana/skript.latex
@@ -3907,48 +3907,83 @@ da die leere Menge immer zur $\sigma$"~Algebra gehört und eine Nullmenge ist.
 
 \begin{satz}\label{satz:hoelder}
   \begin{enumerate}
-   \item Gilt für $p$: $1\leq p \leq \infty$ und $\frac1p + \frac1{p'} =
-    1$ ($p' = \infty$, falls $p=1$). Und sei weiterhin $f\in L_{p}(A,\mu)$
-    und $g\in L_{p'}(A,\mu)$. Dann ist $f\cdot g\in L_{1}(A, \mu)$ und
-    $\norm{f\cdot g}_{1} \leq \norm{f}_{p}\: \norm{g}_{p'}$
-
-    Es gilt dann die \highl{Hölder'sche Ungleichung} für Integrale:
+   \item Es seien $p,p'$ zwei reelle Zahlen mit der Eigenschaft $1\leq
+    p\leq\infty$ und $\frac{1}{p} + \frac{1}{p'}=1$, wobei $p' = \infty$ falls
+    $p=1$ und umgekehrt. Für zwei Funktionen $f\in L_{p}(A,\mu)$ und $g\in
+    L_{p'}(A,\mu)$ ist $f\cdot g\in L_{1}(A, \mu)$ und es gilt die
+    \highl{Hölder'sche Ungleichung für Integrale} $\norm{f\cdot g}_{1} \leq
+    \norm{f}_{p}\: \norm{g}_{p'}$.
     \begin{gather}\label{eq:hoelder-int}
-      \int_{A}\abs{f(x) g(x)}\,d\mu \leq
-         \Bigl(\int_{A}\abs{f(x)}^{p}\,d\mu\Bigr)^{\nicefrac1p}
-         \Bigl(\int_{A}\abs{g(x)}^{p'}\,d\mu\Bigr)^{\nicefrac1{p'}}
+      \int_{A}\abs{f(x)\cdot g(x)}\diff x
+         \leq \Bigl(\int_{A}\abs{f(x)}^{p}\diff x\Bigr)^{\frac{1}{p}}
+         \Bigl(\int_{A}\abs{g(x)}^{p'}\diff x\Bigr)^{\frac{1}{p'}}
     \end{gather}
 
-    Vergleiche auch: \autoref{lem:hoelder-sum} mit der Ungleichung für Summen
-    \autoref{eq:hoelder-sum}
-   \item $0<p \leq \infty$. Es seien $f,g\in L_{p}(A,\mu)$.
+    (Siehe auch \autoref{lem:hoelder-sum} Hölder'sche Ungleichung für Summen)
 
-    Dann ist $f+g\in L_{p}(A,\mu)$ und
+   \item Für $p$ mit $1\leq p \leq \infty$ und zwei Funktionen $f,g\in
+    L_{p}(A,\mu)$ ist $f+g\in L_{p}(A,\mu)$ und es gilt die
+    \highl{Minkowski'sche Ungleichung für Integrale}
     \begin{gather}
-      \norm{f+g}_{p} \leq \norm{f}_{p} + \norm{g}_{p}\ \text{falls } 1\leq p \leq
-         \infty
-         \qquad \text{Minkowski'sche Ungleichung}\label{eq:minkowski}\\
-      \norm{f+g}_{p}^{p} \leq \norm{f}_{p}^{p} + \norm{g}_{p}^{p} \leq
-         2^{1-p}\big(\norm{f}_{p} + \norm{g}_{p}\big)^{p}\ \text{falls}\ 0<p <1
-         \notag
+      \label{eq:minkowski}
+      \norm{f+g}_{p} \leq \norm{f}_{p} + \norm{g}_{p}
     \end{gather}
+
+    (Siehe auch \autoref{lem:minkowski} Minkowski'sche Ungleichung für Summen)
+
+   \item Für $p$ mit $0<p<1$ und zwei Funktionen $f,g\in L_{p}(A,\mu)$ ist
+    $f+g\in L_{p}(A,\mu)$ und es gilt
+    \begin{gather*}
+      \norm{f+g}_{p}^{p}
+         \leq \norm{f}_{p}^{p} + \norm{g}_{p}^{p}
+         \leq 2^{1-p}\big(\norm{f}_{p} + \norm{g}_{p}\big)^{p}
+    \end{gather*}
+
+    (Siehe auch \autoref{fol:l01-quasinorm})
   \end{enumerate}
 
   \begin{proof}
-    \begin{enumerate}[zu~(1)]
-     \item  $1<p<\infty$. Aus \autoref{lem:young-ungl} folgt:
-      \begin{gather*}
-        \abs{f(x) g(x)} \leq \frac{\abs{f(x)}^{p}}p + \frac{\abs{g(x)}^{p'}}p' \in L_{1}(A,\mu)
-      \end{gather*}
-      $f\cdot g$ messbar $\Longrightarrow$ $f\cdot g\in L_{1}$
+    \begin{schritte}
+     \item Der Beweis für die Höldersche Ungleichung für Integrale ist sehr
+      ähnlich dem Beweis für die Höldersche Ungleichung für Summen
+      (\autoref{lem:hoelder-sum}).
 
-      o.\,B.\,d.\,A.\help{wieso gilt obda?}: $\norm{f}_{p} = \norm{g}_{p'} =1$
+      Da $f$ und $g$ messbar sind, ist nach
+      \autoref{satz:eigenschaften-messbare-fkt} auch $f\cdot g$ messbar. Wir
+      zeigen gleich die Höldersche Ungleichung und wodurch $\int_{A}
+      \abs{f\cdot g}\diff\mu$ nach oben beschränkt ist und somit $f\cdot g\in
+      L_{1}$.
+
+      Die Fälle $p=1$ mit $p'=\infty$ und $p=\infty$ mit $p'=1$ sind
+      recht einfach. Man schätzt eine Funktion durch das Supremum nach oben ab
+      und kann diese Konstante dann aus dem Integral herausziehen.
       \begin{gather*}
-        \Longrightarrow \int_{A} \abs{f(x) g(x)}\,d\mu \leq \frac1p
-           \norm{f}_{p}^{p} + \frac1{p'} \norm{g}_{p'}^{p'} =
-           \frac1p + \frac1{p'} = 1 = \norm{f}_{p} + \norm{g}_{p'}
+        \norm{f\cdot g}_{1} =
+           \int_{A} \abs{f(x)\cdot g(x)}\diff x
+           \leq \int_{A} \abs{f(x)}\diff x \cdot \sup_{x\in A}\abs{g(x)}
+           = \norm{f}_{p} \cdot \norm{g}_{p'}
       \end{gather*}
-     \item $1\leq p \leq \infty$, \autoref{lem:1.2.1/4} $\Longrightarrow$
+
+      Wir definieren $A$ und $B$ wie folgt um uns die Schreibarbeit zu
+      erleichtern:
+      \begin{align*}
+        A &:= \Big(\int_{A} \abs{f(x)}^{p}\diff x\Big)^{\frac{1}{p}}
+           &B &:= \Big(\int_{A} \abs{g(x)}^{p'}\diff x\Big)^{\frac{1}{p'}}
+      \end{align*}
+      Dass für $p\ne\infty$ und $p'\ne\infty$ die Ungleichung für den Fall
+      $A=B=0$ gilt, ist leicht zu sehen. Also seien $A$ und $B$ beide größer
+      als null. Mit der Young'schen Ungleichung (\autoref{lem:young-ungl})
+      ergibt sich dann $\norm{f\cdot g}_{1}\leq\norm{f}_{p} \norm{g}_{p'}$.
+      \begin{align*}
+        \frac{1}{AB} \int_{A} \abs{f(x)g(x)} \diff x
+           &= \int_{A} \frac{\abs{f(x)}}{A} \frac{\abs{g(x)}}{B} \diff x\\
+        &\leq \frac{1}{p} \int_{A} \frac{\abs{f(x)}^{p}}{A^{p}} \diff x
+           + \frac{1}{p'} \int_{A} \frac{\abs{g(x)}^{p'}}{B^{p'}} \diff x\\
+        &= \frac{1}{p} + \frac{1}{p'}
+           = 1
+      \end{align*}
+
+     \item $1\leq p \leq \infty$, \autoref{lem:1.2.1/4} $\Rightarrow$
       $\norm{f(x) + g(x)}^{p} \leq 2^{p-1}( \abs{f(x)}^{p} + \abs{g(x)}^{p})\in
       L_{1}(A,\mu)$. Da $f(x) + g(x)$ messbar $\Longrightarrow$
       $\exists\int_{A} \abs{f(x) +g(x)}^{p}\,dx<\infty$
@@ -3956,7 +3991,8 @@ da die leere Menge immer zur $\sigma$"~Algebra gehört und eine Nullmenge ist.
       $0<p < 1$ $\Longrightarrow$ $\abs{f(x) +g(x)}$ messbar $\Longrightarrow$
       $f+g\in L_{p}(A,\mu)$ Beweis der Ungleichung analog zum Beweis für
       $l_{p}$ (\autoref{lem:minkowski})
-    \end{enumerate}
+      \todo{ausbauen}
+    \end{schritte}
   \end{proof}
 \end{satz}
 
