Satz über Verschachtelungsbeziehung von L_p-Räumen
Dieses Ergebnis unterscheidet sich wesentlich von der Beziehung der
l_p-Räume. Daher habe ich nochmal einen Hinweis dazu nach dem Satz
ergänzt.


git-svn-id: https://svn.lug-jena.de/uni-skripte@1551 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/schmeisser-hoehere-ana/skript.latex
+++ b/schmeisser-hoehere-ana/skript.latex
@@ -3997,21 +3997,41 @@ da die leere Menge immer zur $\sigma$"~Algebra gehört und eine Nullmenge ist.
 \end{satz}
 
 \begin{satz}
-  $\mu(A) < \infty, 0 < p < q \leq \infty$.
-
-  Dann ist $L_{q}(A, \mu) \subset L_{p}(A,\mu)$ und $\norm{f}_{p} \leq
-  \mu(\Omega)^{\frac1p-\frac1q}\norm{f}_{q}$
+  \label{satz:Inklusion-Funktr}
+  Es sei wieder $(\Omega,\mathcal{A},\mu)$ der Maßraum und $A\in\mathcal{A}$
+  eine messbare Menge mit endlichem Maß $\mu(A) <\infty$.  Für zwei reelle
+  Zahlen $p$ und $q$ mit $0 < p < q \leq \infty$ ist der Raum $L_{q}(A,\mu)$
+  ein Teilraum von $L_{p}(A,\mu)$ und es gilt die Ungleichung $\norm{f}_{p}
+  \leq \mu(A)^{\frac{1}{p}-\frac{1}{q}}\norm{f}_{q}$.
 
   \begin{proof}
-    $u = \frac{q}p>1, \frac1u+\frac1v =1, \frac1v = 1-\frac{p}q$
-    \begin{align*}
-      \int_{A} \abs{f(x)}^{p}\,d\mu &= \int_{A} \abs{f(x)}^{p} \chi_{A}\,d\mu\\
-      &\leq \left(\int_{A}\abs{f(x)}^{q}\,d\mu\right)^{\frac{p}q}\cdot
-         \bigl(\mu(A)\bigr)^{1-\frac{p}q}
-    \end{align*}
-    $\Longrightarrow$ $\norm{f}_{p} \leq \mu(A)^{\frac1p-\frac1q}\norm{f}_{p}$
+    Es sei $u = \frac{q}{p} > 1$. Dann existiert ein $v$, so dass
+    $\frac{1}{u}+\frac{1}{v} =1$ und $\frac{1}{v} = 1-\frac{p}{q}$. Wir
+    erweitern den Integranten um die charakteristische Funktion von $A$ (wie
+    eine aktive eins) und können die Höldersche Ungleichung für Integrale
+    (\autoref{eq:hoelder-int}) mit $u$ und $v$ als Exponenten anwenden.
+    \begin{gather*}
+      \int_{A} \abs{f(x)}^{p}\diff x
+         = \int_{A} \abs{f(x)}^{p} \chi_{A}(x)\diff x
+         \leq \Big(\int_{A}\abs{f(x)}^{q}\diff x\Big)^{\frac{p}{q}}
+         \cdot \bigl(\mu(A)\bigr)^{1-\frac{p}{q}}
+    \end{gather*}
+
+    Da für alle Funktionen $f\in L_{q}(A,\mu)$ die Norm~$\norm{f}_{q}$ endlich
+    ist, ist mit der Jensen'schen Ungleichung auch die Norm~$\norm{f}_{p}$
+    nach oben beschränkt und damit ist $f\in L_{p}(A,\mu)$.
   \end{proof}
 \end{satz}
+
+Aus diesem Satz ergibt sich, dass auf einer beschränkten Menge jede
+beschränkte Funktion integrierbar ist; $L_{\infty}\subset L_{1}$. Bei den
+Folgenräumen hatten wir genau die umgekehrte Inklusion $l_{p}\subset l_{q}$
+mit $p<q$ (\autoref{fol:l01-quasinorm}), jedoch waren dort die betrachteten
+Folgen unendlich, wärend eben hier die Menge ein endliches Maß haben muss.
+
+\help{Dass die Menge beschränkt ist, hat mir Herr Schmeißer gesagt. Das
+  leuchtet auch ein, aber hatten wir mal eines Satz, dass jede Menge, die ein
+  endliches Maß hat, beschränkt ist?}
 
 \begin{satz}\label{satz:3}
   $(\Omega, \mathcal{A}, \mu)$ wie in \autoref{def:Lp-Raeume},
