Label der Besselschen Ungleichung korrigieren
git-svn-id: https://svn.lug-jena.de/uni-skripte@1561 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/schmeisser-hoehere-ana/skript.latex
+++ b/schmeisser-hoehere-ana/skript.latex
@@ -6290,12 +6290,13 @@ $K(x,y)=0$ für $x<y$.
     minimal, genau dann wenn $\alpha_{j} = \sprod{x, x_{j}}
     (j=1,\ldots,n)$ Minimumeigenschaft der Fourierkoeffizienten
    \item $\forall x\in H$ gilt:
-    \begin{gather*}
+    \begin{gather}
+      \label{eq:bessel}
       \norm{x-\sum_{j=1}^{n} \sprod{x, x_{j}}
          x_{j}}^{2} = \norm{x}^{2} - \sum_{j=1}^{n} \abs{\sprod{x,x_{j}}}^{2}\\
       \sum_{j=1}^{\infty} \abs{\sprod{x,x_{j}}}^{2} \leq
-         \norm{x}^{2}\taglabel{eq:bessel}
-    \end{gather*}
+         \norm{x}^{2}
+    \end{gather}
     \autoref{eq:bessel} ist die \highl{Bessel'sche Ungleichung}.
   \end{enumerate}
 
