Satz über L_p' isometrisch isomorph zu  (L_p)'
git-svn-id: https://svn.lug-jena.de/uni-skripte@1564 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/schmeisser-hoehere-ana/skript.latex
+++ b/schmeisser-hoehere-ana/skript.latex
@@ -5173,9 +5173,8 @@ Funktion $f\in L_{p}(\R^{n})\ (1\leq p\leq \infty)$ als
 \end{bemerk}
 
 \begin{satz}
-  $1\leq p \leq \infty, \frac1p + \frac1{p'}=1$
-
-  Dann
+  Für $p$ mit $1\leq p \leq \infty$ ist der Raum $L_{p'}$, wobei $\frac{1}{p}
+  +\frac{1}{p'}=1$ gilt, isometrisch isomorph zum Dualraum von $L_{p}$.
   \begin{gather*}
     (L_{p}(A,\mu))' \cong L_{p'}(A,\mu)
   \end{gather*}
