Überarbeitung von Satz L_p' isoiso (L_p)' und Bemerkung dazu
Beim Abschreiben scheint da einiges durcheinander gekommen zu sein. Der
Inhalt der Bemerkung war nicht so ganz klar und sah mehr nach dem Beweis
des Satzes aus.


git-svn-id: https://svn.lug-jena.de/uni-skripte@1565 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/schmeisser-hoehere-ana/skript.latex
+++ b/schmeisser-hoehere-ana/skript.latex
@@ -5173,35 +5173,52 @@ Funktion $f\in L_{p}(\R^{n})\ (1\leq p\leq \infty)$ als
 \end{bemerk}
 
 \begin{satz}
-  Für $p$ mit $1\leq p \leq \infty$ ist der Raum $L_{p'}$, wobei $\frac{1}{p}
-  +\frac{1}{p'}=1$ gilt, isometrisch isomorph zum Dualraum von $L_{p}$.
+  Es sei $(\Omega,\mathcal{A},\mu)$ ein $\sigma$"~endlicher Maßraum und
+  $A\in\mathcal{A}$ eine messbare Menge. Für jedes $p$ mit $1\leq p\leq\infty$
+  ist der Raum $L_{p'}$, wobei $\frac{1}{p} +\frac{1}{p'}=1$ gilt, isometrisch
+  isomorph zum Dualraum von $L_{p}$.
   \begin{gather*}
-    (L_{p}(A,\mu))' \cong L_{p'}(A,\mu)
+    L_{p'}(A,\mu) \cong \big(L_{p}(A,\mu)\big)'
   \end{gather*}
+  \help{Im Werner ist der Satz nur mit $p<\infty$ geführt. Ist das
+    $\leq\infty$ hier richtig?}
+
+  \begin{proof}
+    Dass $T\colon L_{p'}(A,\mu)\rightarrow \big(L_{p}(A,\mu)\big)'$ ein
+    isometrischer Isomorphismus ist, kann man im Satz II.2.4 in
+    \cite[S.~60--62]{Werner} nachlesen. Das Funktional $T_{f}\colon
+    L_{p}(A,\mu)\rightarrow\K$ ist linear, wovon man sich leicht überzeugen kann,
+    und mit der Operatornorm beschränkt, also ist
+    $T_{f}\in\big(L_{p}(A,\mu)\big)'$.
+    \begin{align*}
+      T_{f} g = T_{f}(g) &:= \int_{A} f(x)\cdot g(x)\diff\mu\\
+      \norm{T_{f}}_{\linOp(L_{p}(A,\mu), \K)}
+         &= \sup_{\norm{g}_{p}\leq 1} \abs[\Big]{\int_{A} f(x)g(x)\diff\mu}\\
+      \abs{T_{f}g}
+         &\leq \int_{A} \abs{f(x)g(x)}\diff\mu
+         = \norm{fg}_{1}
+         &\text{nach \autoref{satz:eigensch-int-funkt}}\\
+      &\leq \norm{f}_{p'} \norm{g}_{p}
+         &\text{nach \autoref{eq:hoelder-int}}\\
+      &= c \norm{g}_{p}
+         &\text{da $f\in L_{p'}(A,\mu)$}
+    \end{align*}
+  \end{proof}
 \end{satz}
 
 \begin{bemerk} % 3
+  \help{Hier stimmt was nicht. Dass sollte die dritte Bemerkung sein.}
   Übung, Blatt\,6, Aufgabe\,5
 
-  \begin{gather}\label{eq:18}
-    L_{p}(A,\mu) \hookrightarrow (L_{p'}(A,\mu))'\qquad 1\leq p\leq\infty
-  \end{gather}
-
-  \begin{align*}
-    f\in L_{p}(A,\mu) &\Longrightarrow T_{f} := \int_{A}
-       f(x)g(x)\,d\mu,\quad T_{f}\in (L_{p'}(A,\mu))'&&\text{nach
-       \autoref{eq:hoelder-int}}\\
-    \norm{f}_{p} & = \sup_{\norm{g}_{p'}}
-       \abs[\Big]{\int_{A}f(x)g(x)\,d\mu}
-  \end{align*}
-
-  Gleichheit in \autoref{eq:18} gilt genau dann wenn $1< p \leq\infty$.
-
-  \textbf{Aber:}
   \begin{gather*}
-    L_{1}(A,\mu) \supsetneq (L_{\infty}(A,\mu))'\qquad\text{falls }\dim
-    L_{1}(A,\mu) = \infty
+    L_{p}(A,\mu) \hookrightarrow (L_{p'}(A,\mu))'\qquad 1\leq p\leq\infty
   \end{gather*}
+  \help{Was sollte das für ein Zeichen sein?}
+
+  Die Gleichheit $L_{p'}(A) = \big(L_{p'}(A,\mu)\big)'$ der beiden Räume gilt
+  für $p>1$. Aber falls $\dim L_{1}(A,\mu) = \infty$ ist, gilt $L_{1}(A,\mu)
+  \supsetneq \big(L_{\infty}(A,\mu)\big)'$.
+  \help{Wieso steht hier ein "`Aber"'?}
 \end{bemerk}
 
 \begin{satz}[Riesz] % 3
