--- a/schmeisser-hoehere-ana/skript.latex
+++ b/schmeisser-hoehere-ana/skript.latex
@@ -5222,6 +5222,9 @@ Funktion $f\in L_{p}(\R^{n})\ (1\leq p\leq \infty)$ als
 \end{bemerk}
 
 \begin{satz}[Riesz] % 3
+  \help{Hier stimmt was nicht. Dass sollte der dritte Satz sein.}
+  \help{Im Werner heiﬂt der Satz "`Riezscher Darstellungssatz"'. Was hat das
+    mit \autoref{sec:2.1.2} zu tun?}
   (siehe Werner, S.\,62--64)
 
   $K$ kompakter metrischer Raum
