Das Paket tikz laden
Sämtliche Grafiken sollten direkt mit LaTeX erzeugt werden, da nur so
eine ordentliche Skalierung und Beschriftung möglich ist. TikZ finde ich
besser als PSTricks, da es auch direkt mit PDF funktioniert.


git-svn-id: https://svn.lug-jena.de/uni-skripte@1570 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/schmeisser-hoehere-ana/skript.latex
+++ b/schmeisser-hoehere-ana/skript.latex
@@ -30,6 +30,7 @@
 \usepackage{makeidx}
 \usepackage[final]{graphicx}
 \usepackage{xcolor}
+\usepackage{tikz}
 \usepackage[draft=false,colorlinks,bookmarksnumbered,linkcolor=blue,breaklinks]{hyperref}
 
 \usepackage[latin1]{inputenc}
