Bemerkung über Folgerungen aus der Konvergenz in D(Omega)
Diese Bemerkung gibt es wiederum im Hefter von Herrn Schmeißer.


git-svn-id: https://svn.lug-jena.de/uni-skripte@1578 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/schmeisser-hoehere-ana/skript.latex
+++ b/schmeisser-hoehere-ana/skript.latex
@@ -10878,6 +10878,20 @@ Ableitung von $\phi\in C_{0}^{\infty}(\Omega)=D(\Omega)$ bezeichnet:
 Als $\abs{\alpha}$ ist dann die Summe $\sum_{i=1}^{n}\alpha_{i}$.
 
 \begin{bemerk}
+  Aus der Konvergenz $\phi_{j}\xrightarrow[D]{}\phi$ folgt
+  $D^{\alpha}\phi_{j}\rightarrow D^{\alpha}\phi$ gleichmäßig auf $K$ für alle
+  $\alpha$.
+  \help{Gilt auch die Umgekehrte Schlussfolgerung? Frau Haroske hatte nämlich
+    die Definition der Konvergenz mit $D^{\alpha}\phi_{j}\xrightarrow[D]{}
+    D^{\alpha}\phi$.}
+
+  Aus $\phi_{j}\xrightarrow[D]{}\phi$ folgt
+  $D^{\alpha}\phi_{j}\xrightarrow[D]{} D^{\alpha}\phi$ für alle $\phi$ und
+  $a(x)\phi_{j}(x) \xrightarrow[D]{} a(x)\phi(x)$ für alle $a\in
+  C_{0}^{\infty}(\Omega)$.
+\end{bemerk}
+
+\begin{bemerk}
   \begin{itemize}
    \item $T\colon D(\Omega) \rightarrow \C$
    \item $T(a_{1}\phi_{1} + a_{2}\phi_{2}) = a_{1}(T\phi_{1}) +
