Definition von Distribution
Diese Definition stammt aus dem Hefter von Herrn Schmeißer und entspricht
dem, was Frau Haroske in der Bemerkung gemacht hat. Dafür, dass es in dem
ganzen Kapitel um Distributionen geht, sollte man das nicht nur in einer
Bemerkung verstecken.


git-svn-id: https://svn.lug-jena.de/uni-skripte@1579 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/schmeisser-hoehere-ana/skript.latex
+++ b/schmeisser-hoehere-ana/skript.latex
@@ -10891,17 +10891,28 @@ Als $\abs{\alpha}$ ist dann die Summe $\sum_{i=1}^{n}\alpha_{i}$.
   C_{0}^{\infty}(\Omega)$.
 \end{bemerk}
 
-\begin{bemerk}
-  \begin{itemize}
-   \item $T\colon D(\Omega) \rightarrow \C$
-   \item $T(a_{1}\phi_{1} + a_{2}\phi_{2}) = a_{1}(T\phi_{1}) +
-    a_{2}T(\phi_{2}), a_{1}, a_{2}\in \C, \phi_{1}, \phi_{2}\in D(\Omega)$
-   \item $\phi_{j} \xrightarrow[D]{} \phi$ $\Longrightarrow$ $T(\phi_{j})
-    \rightarrow T(\phi)$
-   \item $\bigl[D(\Omega)\bigr]' = D'(\Omega)$
-   \item L.\,Schwartz 1950/51
-  \end{itemize}
-\end{bemerk}
+\begin{defini}
+  Ein lineares und stetiges Funktional $T\colon D(\Omega)\rightarrow\C$ nennt
+  man \highl{Distribution} und bezeichnet mit $D'(\Omega)$ den \highl{Raum der
+  Distributionen}.
+  \begin{gather*}
+    D'(\Omega) = \{ f\big| f\colon D(\Omega) \rightarrow \C, \text{~linear und
+       stetig}\}
+  \end{gather*}
+  Zur Erinnerung: linear heiﬂt $\forall a_{1},a_{2}\in\C$ und
+  $\forall\phi_{1},\phi_{2}\in D(\Omega)$ gilt $T(a_{1}\phi_{1} +
+  a_{2}\phi_{2}) = a_{1}(T\phi_{1}) + a_{2}T(\phi_{2})$ und stetig heiﬂt
+  $\phi_{j}\rightarrow\phi \impliziert T(\phi_{j}) \rightarrow T(\phi)$.
+
+  Eine Folge~$(f_{j})_{j}\subset D'(\Omega)$ von Distributionen konvergiert
+  in $D'(\Omega)$ gegen $f\in D'(\Omega)$ \gdwdef{} $\forall\phi\in
+  D(\Omega)\colon f_{j}(\phi)\rightarrow f(\phi)$.
+
+  \todo{Aussagen von Frau Haroske einarbeiten: $D'(\Omega) =
+    \big(D(\Omega)\big)'$. \help{Wer sieht, woher die Beschr‰nktheit kommt?}
+    Und ein L.\,Schwarz hatte 1950/51 irgendwie die Finger im Spiel -- ein
+    bisschen Personenkult schadet nicht.}
+\end{defini}
 
 \begin{bsp}
   \begin{enumerate}
