Label für den Satz über Distributionsgleichheit
git-svn-id: https://svn.lug-jena.de/uni-skripte@1580 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/schmeisser-hoehere-ana/skript.latex
+++ b/schmeisser-hoehere-ana/skript.latex
@@ -11063,6 +11063,7 @@ Als $\abs{\alpha}$ ist dann die Summe $\sum_{i=1}^{n}\alpha_{i}$.
 \end{bemerk}
 
 \begin{satz}
+  \label{satz:distri-gleichheit}
   Seien $T_{1}, T_{2}\in D'(\Omega)$. Dann gilt $T_{1}= T_{2}$ auf
   $\Omega$ genau dann, wenn für alle $x\in \Omega$ eine Umgebung $U(x)$
   existiert mit $(T_{1})_{U(x)} = (T_{2})_{U(x)}$
