--- a/schmeisser-hoehere-ana/skript.latex
+++ b/schmeisser-hoehere-ana/skript.latex
@@ -10916,32 +10916,67 @@ Als $\abs{\alpha}$ ist dann die Summe $\sum_{i=1}^{n}\alpha_{i}$.
 
 \begin{bsp}
   \begin{enumerate}
-   \item reguläre Distributionen: $L_{1}^{loc}$ ($g\in L_{1}^{loc}$,
-    falls $\int_{K} g(x)\,dx$ existiert für alle kompakten $K\subset
-    \R^{n}$)
+   \item Die Menge \highl{$L_{1}^{\text{loc}}(\Omega)$} bezeichnet die
+    \highl{Menge der lokal integrierbaren Funktionen}, also all jene
+    Funktionen~$g$ für die auf allen kompakten
+    Teilmengen~$K\subset\Omega\subset\R^{n}$ das Integral $\int_{K} g(x)\diff
+    x$ existiert.
 
-    $L_{1}^{loc}(\Omega) \subset D'(\Omega)$ bei geeigneter Intepretation
-    von "`$\subset$"'
+    Ein Funktional~$T_{f}$ mit einer lokal integrierbaren Funktionen~$f\in
+    L_{1}^{\text{loc}}(\Omega)$ bezeichnet man als \highl{reguläre
+    Distribution}; $T_{f}\in D'(\Omega)$.
+    \begin{gather*}
+      \forall\phi\in D(\Omega)\colon
+         T_{f}(\phi) := \int_{\Omega} f(x)\phi(x)\diff x
+    \end{gather*}
+
+    "`$L_{1}^{\text{loc}}\subset D(\Omega)$"'
 
     $f\in L_{1}^{loc}(\Omega), \phi \in D(\Omega) \Longrightarrow
     f\phi\in L_{1}(\Omega)$
     \help{hier fehlt was}
 
-    $T_{f}(\phi) := \int_{\Omega} f(x) \phi(x)\,dx, \phi\in D(\Omega)$
+    \begin{proof}
+      $\phi_{j}\xrightarrow[D]{}\phi$ $\impliziert$ $\supp \phi_{j}\subset K$
+      kompakt $\forall j$, $\supp \phi\subset K$.
+      \begin{align*}
+        \abs{T_{f}(\phi_{j}) - T_{f}(\phi)}
+           &\leq \int_{K} \abs{f(x)} \abs{\phi_{j}(x)-\phi(x)} \diff x\\
+        &\leq \norm{\phi_{j}-\phi}_{K,0} \norm{f}_{L_{1}(K)} \rightarrow 0
+      \end{align*}
+    \end{proof}
 
-    Behauptung: $T_{f}\in D'(\Omega)$, linear klar, stetig:
-    $\phi_{j} \xrightarrow[D]{}\phi\colon D^{\gamma}\phi_{j} \rightarrow
-    D^{\gamma}_{\phi}$ gleichmäßig auf $K$, insbesondere:
-    $\phi_{j}\xrightarrow{glm.}\phi$ $\Longrightarrow$ $\exists M>0
-    \forall x\in K\forall j\in \N: \abs{\phi_{j}(x)}\leq M$
-    $\Longrightarrow$ $\abs{f(x)\phi_{j}(x)} \leq
-    \begin{cases}M\abs{f(x)} & x\in M\\0&\text{sonst}\end{cases}\in
-    L_{1}(\Omega)$
+   \item Für $a\in\Omega$ ist $\delta_{a}(\phi) := \phi(a)$ die
+    \highl{Deltadistribution}; $\delta\in D'(\Omega)$.
 
-    Lebesgue $\Longrightarrow$ $T_{f}(\phi_{j}) = \int_{\Omega} f(x)
-    \phi_{j}(x)\,dx \xrightarrow{j\rightarrow\infty} \int_{\Omega} f(x)
-    \phi(x)\,dx = T_{f}(\phi)$
-   \item
+    \begin{proof}
+      \begin{gather*}
+        \abs{\delta_{a}(\phi_{j})-\delta_{a}(\phi)}
+           = \abs{\phi_{j}(a)-\phi(a)} \leq \norm{\phi_{j}-\phi}_{K,0}
+      \end{gather*}
+    \end{proof}
+
+   \item $P(\frac{1}{x})$: $\frac{1}{x}\notin L_{1}^{\text{loc}}(\R)$.
+    Definiere:
+    \begin{align*}
+      P(\frac{1}{x})(\phi)
+         &:= P.V. \int_{-\infty}^{\infty} \frac{1}{x}\phi(x)\diff x\\
+      &:= \lim_{\epsilon\rightarrow0}
+         \Big(\int_{-\infty}^{-\epsilon} \frac{\phi(x)}{x}\diff x
+         + \int_{\epsilon}^{\infty} \frac{\phi(x)}{x} \diff x\Big)
+    \end{align*}
+    $R$ ist irgendein Radius, $\supp \phi\subset(-R,R)$
+    \begin{align*}
+      \norm{P(\frac{1}{x})(x)}
+         &= \abs[\Big]{\lim_{\epsilon\rightarrow0}
+         \Big(\int_{-R}^{-\epsilon} \phi'(\xi)\diff x
+         + \int_{\epsilon}^{R} \phi'(\xi) \diff x\Big)}
+         &\text{da $\phi(x)=\phi(0)+\phi'(\xi)x$}\\
+      &\leq \lim_{\epsilon\downarrow0} 2R \sup_{x\in(-R,R)} \abs{\phi'(x)}\\
+      &\leq 2R \norm{\phi}_{K,1}
+    \end{align*}
+
+    ($\supp \phi\subset K$, $\supp\phi\subset[-R,R]$)
   \end{enumerate}
 \end{bsp}
 
