--- a/schmeisser-hoehere-ana/skript.latex
+++ b/schmeisser-hoehere-ana/skript.latex
@@ -10980,6 +10980,31 @@ Als $\abs{\alpha}$ ist dann die Summe $\sum_{i=1}^{n}\alpha_{i}$.
   \end{enumerate}
 \end{bsp}
 
+\begin{lemma}[Fundamentallemma]
+  \label{lem:distri-fundlem}
+  $f\in L_{1}^{\text{loc}}(\Omega)$ und für alle $\phi\in D(\Omega)$ ist
+  \begin{gather*}
+    \int_{\Omega} f(x)\phi(x)\diff x =0
+  \end{gather*}
+  dann ist $f(x)=0$ fast überall.
+
+  \begin{proof}
+    \todo{Abtippen}
+
+    \begin{gather*}
+      \Rightarrow \norm{f}_{L_{1}(K)}
+         = \norm{\tilde{f}}_{L_{1}(K)}
+         \leq \norm{\underbrace{\tilde{f}-(\tilde{f})_{h}}
+                _{\rightarrow0}}_{L_{1}(K)}
+         + \norm{\underbrace{(\tilde{f})_{h}}_{=0}}_{L_{1}(K)}
+    \end{gather*}
+    $\Rightarrow$ $\norm{f}_{L_{1}(K)}'=0$ $\Rightarrow$ $f=0$ auf $K$ fast
+    überall
+
+    $\forall K\subset\Omega$ kompakt
+  \end{proof}
+\end{lemma}
+
 \subsection{Träger einer Distribution und Lokalisationsprinzip}
 
 \autoref{satz:1.2.3/2}: $\Omega\subset\R^{n}$ offen, $K\subset
