--- a/schmeisser-hoehere-ana/skript.latex
+++ b/schmeisser-hoehere-ana/skript.latex
@@ -11005,6 +11005,23 @@ Als $\abs{\alpha}$ ist dann die Summe $\sum_{i=1}^{n}\alpha_{i}$.
   \end{proof}
 \end{lemma}
 
+\begin{defini}
+  $T\in D'(\Omega)$ heißt  \gdwdef{\highl{reguläre Distribution}} es eine
+  lokal integrierbare Funktion $f\in L_{1}^{\text{loc}}(\Omega)$ gibt, für die
+  alle $\phi\in D(\Omega)$ gilt:
+  \begin{gather*}
+    T(\phi) = T_{f}(\phi)
+       = \int_{\Omega} f(x)\phi(x)\diff x
+  \end{gather*}
+
+  Sonst heißt $T$ \highl{singuläre Distribution}.
+\end{defini}
+
+\begin{bemerk}
+  Aus \autoref{lem:distri-fundlem} folgt, dass es höchstens eine Funktion~$f$
+  mit $T_{f}=T$ gibt. Wir identifizieren $f$ mit $T_{f}$.
+\end{bemerk}
+
 \subsection{Träger einer Distribution und Lokalisationsprinzip}
 
 \autoref{satz:1.2.3/2}: $\Omega\subset\R^{n}$ offen, $K\subset
