--- a/schmeisser-hoehere-ana/skript.latex
+++ b/schmeisser-hoehere-ana/skript.latex
@@ -11428,15 +11428,15 @@ auch, dass die Distribution \highl{verschwindet}.
    \item
   zu Punkt (4) "`Affine Transformationen"' der \autoref{def:5.1.3/1}:
   $f\in L_{1}^{loc}(\R^{n}) \rightarrow f(Ax+b) \in L_{1}^{loc}(\R^{n})$
-  \help{Hier fehlt was. Vielleicht der auskommentierte Teil?}
-  % \begin{align*}
-  %   \Longrightarrow$ $T_{f(Ax+b)}(\phi) &= \int_{\R^{n}}
-  %      f(Ax+b)\phi(x)\,dx\\
-  %   \intertext{$Ax+b = y \Leftrightarrow x = A^{-1}(y-b)$}
-  %   &= \int_{\R^{n}} f(y)\phi(A^{-1}(y-b)) \abs{\det A^{-1}}\,dy\\
-  %   &= \frac{1}{\abs{\det A}} \int_{\R^{n}} f(y)\phi(A^{-1}(y-b))\,dy\\
-  %   &=: T(A\cdot +b)(\phi)
-  % \end{align*}
+    \begin{align*}
+      \Longrightarrow T_{f(Ax+b)}(\phi)
+         &= \int_{\R^{n}} f(Ax+b)\phi(x)\diff x\\
+      \intertext{$Ax+b = y \Leftrightarrow x = A^{-1}(y-b)$,
+        $\frac{\partial x}{\partial y} =\det A^{-1} =\frac{1}{\det A}$}
+      &= \int_{\R^{n}} f(y)\phi(A^{-1}(y-b)) \abs{\det A^{-1}}\diff y\\
+      &= \frac{1}{\abs{\det A}} \int_{\R^{n}} f(y)\phi(A^{-1}(y-b))\diff y\\
+      &=: T(A\cdot +b)(\phi)
+    \end{align*}
   \end{itemize}
 \end{bemerk}
 
