Hilferuf aus dem Schwartzraum
git-svn-id: https://svn.lug-jena.de/uni-skripte@1593 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/schmeisser-hoehere-ana/skript.latex
+++ b/schmeisser-hoehere-ana/skript.latex
@@ -12180,6 +12180,7 @@ Wunsch: Fouriertransformationen sinnvoll auf Distributionen übertragen:
    \item $b\in\R^{n}, A$ reguläre $n\times n$-Matrix, $\phi\in S(\R^{n})
     \Rightarrow \phi(Ax+b) \in S(\R^{n}), \phi_{j} \xrightarrow[S]{} \phi
     \Rightarrow \phi_{j}(Ax+b) \xrightarrow[S]{} \phi(Ax+b)$
+    \help{Ist mit $\phi(Ax+b)$ eigentlich $\phi\circ(Ax+b)$ gemeint?}
   \end{enumerate}
 
   \begin{proof}
