Abschnittsgliedung im Kapitel „Distributionen“ korrigieren
Das Kapitel „Abspann“ gibt es im Hefter von Herrn Schmeißer nicht. Ich
habe das bestimmt falsch abgeschrieben.

Den Abschnitt Fouriertransformationen auf L_1 und L_2 gibt es bei Herrn
Schmeißer nicht. Bei ihm heißt das Kapitel „Der Satz von Plancherel“.


git-svn-id: https://svn.lug-jena.de/uni-skripte@1597 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/schmeisser-hoehere-ana/skript.latex
+++ b/schmeisser-hoehere-ana/skript.latex
@@ -12904,8 +12904,7 @@ lassen sich als langsam wachsende Distributionen interpretieren.
   \end{proof}
 \end{folger}
 
-\subsection{Die Fouriertransformation auf \texorpdfstring{$L_{1}(\R^{n})$}{L1(Rn)} und
-  \texorpdfstring{$L_{2}(\R^{n})$}{L2(Rn)}}
+\subsection{Der Satz von Plancherel}
 
 \begin{satz}[Satz von Riemann-Lebesgue]
   (Der Satz sagt, die Fouriertranfsormierte ist stetig und der Limes =0)
@@ -12944,8 +12943,11 @@ lassen sich als langsam wachsende Distributionen interpretieren.
 
 \todo{hier fehlt eine Vorlesung}
 
-\chapter{Abspann}
-\section{Faltung von Distributionen}
+\subsection{Fouriertransformation und Faltung}
+
+\todo{hier fehlt was}
+
+\subsubsection{Faltung von Distributionen}
 
 \begin{enumerate}
  \item $f,g\in L_{1}(\R^{n}), \phi\in S(\R^{n})$
@@ -13130,6 +13132,12 @@ lassen sich als langsam wachsende Distributionen interpretieren.
 \end{satz}
 
 \todo{hier fehlt eine Vorlesung}
+
+\section{Einige Anwendungen}
+
+\subsection{Fundamentallösungen -- PDGL}
+
+\todo{hier fehlt was}
 
 Wir klären das einfache Fragenzeichen:
 \begin{align*}
