--- a/schmeisser-hoehere-ana/skript.latex
+++ b/schmeisser-hoehere-ana/skript.latex
@@ -12905,6 +12905,7 @@ lassen sich als langsam wachsende Distributionen interpretieren.
 \end{folger}
 
 \subsection{Der Satz von Plancherel}
+\label{sec:Plancherel}
 
 \begin{satz}[Satz von Riemann-Lebesgue]
   (Der Satz sagt, die Fouriertranfsormierte ist stetig und der Limes =0)
@@ -13056,7 +13057,91 @@ lassen sich als langsam wachsende Distributionen interpretieren.
 
 \subsection{Fouriertransformation und Faltung}
 
-\todo{hier fehlt was}
+Wiederholung: Satz 1.3.7/2
+\begin{gather*}
+  f* g(x)
+     =\int_{\R^{n}} f(x-y) g(y) \diff y
+     \qquad x\in\R^{n}
+\end{gather*}
+
+\begin{align*}
+  \norm{f*g}_{1}
+     &\leq \norm{f}_{1} \norm{g}_{1}\\
+  \norm{f*g}_{p}
+     &\leq \norm{f}_{1} \norm{g}_{p}
+     &1\leq p\leq\infty\\
+  \norm{f*g}_{\infty}
+     &\leq \norm{f}_{p} \norm{g}_{p'}
+     &f*g\in\overline{C}(\R^{n}), 1\leq p<\infty
+\end{align*}
+
+\begin{satz}
+  \label{satz:8}
+  $f,g\in L_{1}(\R^{n})$ $\Rightarrow$ $F(f*g) = (2\pi)^{\frac{n}{2}} Ff Fg
+  \in C_{0}(\R^{n})$
+
+  \begin{proof}
+    \begin{align*}
+      \int (f*g)(x) \ez^{-\ie x\xi} \diff x
+         &= \int \int f(x-y) g(y) \ez^{-\ie x\xi} \diff y \diff\xi\\
+      &= \int_{\R^{n}} \underbrace{(\int_{\R^{n}} f(x-y) \ez^{-\ie
+         (x-y)\xi}\diff x)}_{=(2\pi)^{-\frac{n}{2}}(Ff)(\xi)}
+         g(y) \ez^{-\ie y\xi} \diff y
+         &\text{Fubini}\\
+      &= (2\pi)^{n} (Ff)(\xi) Fg(\xi)
+    \end{align*}
+  \end{proof}
+\end{satz}
+
+\begin{folger}
+  $f,g\in S(\R^{n})$ $\Rightarrow$ $(f*g)\in S(\R^{n})$ stetige Operation,
+  $F(f*g) = (2\pi)^{\frac{n}{2}}Ff Fg$
+
+  \begin{proof}
+    $F(f*g) = Ff\cdot Fg (2\pi)^{\frac{n}{2}}$ nach \autoref{satz:8}
+
+    $\subset S(\R^{n})$, $F^{-1} \Rightarrow f*g \in S(\R^{n})$
+  \end{proof}
+\end{folger}
+
+\begin{satz}
+  $f,g \in L_{2}(\R^{n})$ $\Rightarrow$ $F(f*g)= (2\pi)^{\frac{n}{2}}
+  Ff\cdot Fg \in L_{1}(\R^{n})$
+
+  \begin{proof}
+    $(f_{j})_{j}, (g_{j})_{j}\subset S(\R^{n})$ mit $f_{j}\rightarrow f$ in
+    $L_{1}$, $g_{j}\rightarrow g$ in $L_{2}$
+
+    $\Rightarrow$
+    \begin{gather*}
+      \norm{f_{j}*g_{j} - f*g}_{\infty}
+         \leq \norm{f_{j}}_{2} \norm{g_{j}-g}_{2} + \norm{f_{j}-f}_{2}
+         \norm{g}_{2}
+         \rightarrow 0
+    \end{gather*}
+    $\Rightarrow$ $F(f_{j}*g_{j}) \rightarrow F(f*g)$ in $S'(\R^{n})$.
+
+    Andererseits:
+    \begin{align*}
+      \norm{F(f_{j}*g_{j}) - (Ff)\cdot(Fg)\cdot(2\pi)^{\frac{n}{2}}}_{1}
+         &= \norm{Ff_{j} \cdot Fg_{j} - Ff \cdot Fg}_{1} (2\pi)^{\frac{n}{2}}\\
+      &\leq (\norm{Ff_{j}}_{2} \norm{F(g_{j}-g)}_{2} + \norm{F(f_{j}-f)}_{2}
+         \norm{Fg}_{2}) (2\pi)^{\frac{n}{2}}\\
+      &\rightarrow 0
+         &\text{nach \autoref{sec:Plancherel}}
+    \end{align*}
+
+    $\Rightarrow$ $F(f_{j}*g_{j}) \rightarrow (2\pi)^{\frac{n}{2}} Ff\cdot Fg$
+    in $S'(\R^{n})$
+
+    $\Rightarrow$ $F(f*g) = (2\pi)^{\frac{n}{2}} Ff\cdot Fg\in L_{1}(\R^{n})$
+  \end{proof}
+\end{satz}
+
+\begin{bemerk}
+  $1\leq p\leq2$, $f\in L_{p}$, $g\in L_{1}$ $\Rightarrow$
+  $F(\underbrace{f*g}_{\in L_{p}}) = (2\pi)^{\frac{n}{2}} Ff\cdot Fg \in L_{p'}$
+\end{bemerk}
 
 \subsubsection{Faltung von Distributionen}
 
