\todo für kompakt
git-svn-id: https://svn.lug-jena.de/uni-skripte@1609 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/schmeisser-hoehere-ana/skript.latex
+++ b/schmeisser-hoehere-ana/skript.latex
@@ -1161,6 +1161,8 @@ $(X,d)$ immer um einen metrischer Raum.
   Für einen metrischer Raum~$(X,d)$ heißt die Teilmenge $A\subset X$
   \gdwdef{\highl{kompakt} oder \highl{folgenkompakt}} jede Folge in $A$
   eine konvergente Teilfolge mit Grenzwert in $A$ besitzt.
+  \todo{Die Konvergenz einer Folge wurde nur für normierte Vektorräume
+    definiert!}
 \end{defini}
 
 \begin{bemerk}\label{bem:kompakt}
