--- a/schmeisser-hoehere-ana/skript.latex
+++ b/schmeisser-hoehere-ana/skript.latex
@@ -3183,7 +3183,7 @@ Triebel~\cite{Triebel-Ana+math-Phys}.
    \item sowohl die leere Menge~$\emptyset$ als auch die Grundmenge~$\Omega$
     zur Menge~$\mathcal{A}$ gehören,
 
-   \item die Komplementmenge $A^{\complement}=\Omega\setminus\{A\}$ jedes
+   \item die Komplementmenge $A^{\complement}=\Omega\setminus A$ jedes
     Elements~$A$ von $\mathcal{A}$ ebenfalls zu $\mathcal{A}$ gehört und
 
    \item für jede abzählbare Teilmenge~$A$ von $\mathcal{A}$ ist auch die
@@ -3253,8 +3253,8 @@ Triebel~\cite{Triebel-Ana+math-Phys}.
    \item Das Maß~$\mu$ heißt \gdwdef{\highl{vollständig}} jede Teilmenge einer
     \highl{Nullmenge} eine Nullmenge ist und zur $\sigma$"~Algebra gehört.
     \begin{gather*}
-      \forall N\in \mathcal{A}\colon \mu(N)=0, \forall A\subset N
-         \impliziert A\in \mathcal{A}, \mu(A)=0
+      \forall N\in \mathcal{A} \text{~mit~} \mu(N)=0, \forall A\subset N\colon
+         A\in \mathcal{A}, \mu(A)=0
     \end{gather*}
   \end{enumerate}
 \end{defini}
@@ -3269,7 +3269,7 @@ Triebel~\cite{Triebel-Ana+math-Phys}.
 
     \help{Sind diese beiden Sachen korrekt?}
 
-   \item Wenn wir später auch unendliche Maße~$\mu(A) = \infty$ zugelassen,
+   \item Wenn wir später auch unendliche Maße~$\mu(A) = \infty$ zulassen,
     dann sollten folgenden Rechenregeln für den Umgang mit Unendlich gelten:
     $\infty+\infty = \infty$ und für jede reelle Zahl~$r\geq0$ ist $r +\infty
     =\infty$.
@@ -3380,11 +3380,13 @@ Triebel~\cite{Triebel-Ana+math-Phys}.
 
    \item Das Maß~$\lambda$ ist invariant bzgl. Translation und Rotation
     \begin{align*}
-      x\in\R^{n}, A\in \mathcal{L} &\impliziert \lambda(x+A) =
+      x\in\R^{n}, A\in \mathcal{L}
+         &\impliziert \lambda\big(\{x+y\colon y\in A\}\big) =
          \lambda(A)\\
       A\in \mathcal{L}, T\in O(n) &\impliziert
          \lambda\big(\{y = Tx \colon x\in A\}\big) = \lambda(A)
     \end{align*}
+    \highl{$O(n)$} ist die Menge der orthogonalen Matrizen
 
    \item Für jede Lebesgue"=messbare Menge $A\in \mathcal{L}$ gibt es ein
     offenes Gebiet~$\Omega\subset\R^{n}$, das $A$ umfasst und auf dem die
@@ -3445,7 +3447,7 @@ da die leere Menge immer zur $\sigma$"~Algebra gehört und eine Nullmenge ist.
     \norm{g}
        &:= \norm{f}, \text{~falls~} g\in[f]_{\sim}
   \end{align*}
-  Entsprechende Beweise wie folgen später:
+  Entsprechende Beweise folgen später:
   \begin{itemize}
    \item \autoref{satz:eigensch-int-funkt}: $\norm{f}=0 \gdw{} f\sim 0$
 
@@ -4183,7 +4185,7 @@ Folgen unendlich, wärend eben hier die Menge ein endliches Maß haben muss.
 
   \begin{proof}
     Nach \autoref{fol:Lp-Norm} ist der Raum $(L_{p}(A,\mu),\norm{\cdot}_{p})$
-    ist für $1\leq p\leq\infty$ ein normierter Vektorraum und wir können
+    für $1\leq p\leq\infty$ ein normierter Vektorraum und wir können
     \autoref{satz:1.1.1/1} anwenden. Wir müssen also zeigen, dass für jede
     absolutkonvergente Reihe die Reihe der nicht normierten Glieder in
     $L_{p}(A,\mu)$ konvergiert. Es sei also
@@ -4551,6 +4553,7 @@ Folgen unendlich, wärend eben hier die Menge ein endliches Maß haben muss.
 \begin{satz}\label{satz:1.3.7/1}
   Gelten die Bedingungen $1 \leq p < \infty, f\in L_{p}(\R^{n}), y\in
   \R^{n}$
+  $T_{\alpha}\colon L_{p}\rightarrow L_{p}$
   \begin{gather*}
     T_{y}f(x) := f(x+y)\quad(x\in \R^{n})\quad\qquad\text{Translationsoperator}
   \end{gather*}
@@ -4559,7 +4562,7 @@ Folgen unendlich, wärend eben hier die Menge ein endliches Maß haben muss.
   \begin{enumerate}
    \item $\norm{T_{y}f}_{p} = \norm{f}_{p}$
    \item $\lim_{\abs{y} \rightarrow0} \norm{T_{y}f-f}_{p} = 0$ (Stetigkeit der
-    Translation im $p$-ten Mittel)
+    Translation im $p$.~Mittel)
   \end{enumerate}
 
   \begin{proof}
